<resources>
    <string name="app_name">CIS-2818-Project4</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="like_bttn">Like</string>
    <string name="dislike_bttn">Dislike</string>
    <string name="favorite">Favorite This Joke</string>
    <string name="next_joke">Next Joke</string>
    <string name="joke_will_go_here">joke will go here</string>
    <string name="bitcoin">TODO</string>
</resources>